data/forge_javadoc/1.7.10/raw/net/minecraft/client/audio/PositionedSound.md
---
title: "PositionedSound"
description: "public abstract class PositionedSound extends java.lang.Object implements ISound"
package: "net/minecraft/client/audio"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/audio/PositionedSound.html"
sourceType: javadoc
---

# PositionedSound

**Inheritance:** java.lang.Object → net.minecraft.client.audio.PositionedSound

## Class signature

```java
public abstract class PositionedSound extends java.lang.Object implements ISound
```

## Constructors

- `PositionedSound(ResourceLocation p_i45103_1_)`

## Methods

- `boolean canRepeat()`
- `ISound.AttenuationType getAttenuationType()`
- `float getPitch()`
- `ResourceLocation getPositionedSoundLocation()`
- `int getRepeatDelay()`
- `float getVolume()`
- `float getXPosF()`
- `float getYPosF()`
- `float getZPosF()`

## Fields

- `protected float field_147663_c`
- `protected ResourceLocation field_147664_a`
- `protected int field_147665_h`
- `protected ISound.AttenuationType field_147666_i`
- `protected boolean repeat`
- `protected float volume`
- `protected float xPosF`
- `protected float yPosF`
- `protected float zPosF`
